@@ -1,3 +1,10 @@
+2005-05-26  Jakub Jelinek  <jakub@redhat.com>
+
+	* elfcode.h (elf_object_p): Fail if e_shoff != 0, e_shnum == 0 and
+	first shdr has sh_size == 0.  Fail if e_shnum is large to cause
+	arithmetic overflow when allocating the i_shdr array.
+	Sanity check sh_link and sh_info fields.  Fix e_shstrndx sanity check.
+
 2005-05-25  Richard Henderson  <rth@redhat.com>
 
 	* elf64-alpha.c: Update all function definitions to ISO C.  Remove
